Fixed bug with logo icon not showing up

--- a/web/ik-templates/only-image/only-image.css
+++ b/web/ik-templates/only-image/only-image.css
@@ -417,11 +417,7 @@
   .only-image--edit-image-settings:hover {
     cursor: pointer; }
 
-<<<<<<< HEAD
-/* line 147, ../../sass/theme/_global-silent-classes.scss */
-=======
 /* line 157, ../../sass/theme/_global-silent-classes.scss */
->>>>>>> edd74a162792d80daae22ba54d27d6a9d744a4ba
 .only-image--edit-logo-settings {
   bottom: 5%;
   position: absolute;
@@ -434,11 +430,7 @@
   width: 51px;
   height: 51px;
   background-position: 0 -884px; }
-<<<<<<< HEAD
-  /* line 154, ../../sass/theme/_global-silent-classes.scss */
-=======
   /* line 164, ../../sass/theme/_global-silent-classes.scss */
->>>>>>> edd74a162792d80daae22ba54d27d6a9d744a4ba
   .only-image--edit-logo-settings:hover {
     cursor: pointer; }
 
@@ -1127,14 +1119,9 @@ html.is-locked body {
 
 /* line 4, only-image.scss */
 .only-image {
-<<<<<<< HEAD
-  background-size: cover; }
-  /* line 16, only-image.scss */
-=======
   background-size: cover;
   background-position: center; }
-  /* line 17, only-image.scss */
->>>>>>> edd74a162792d80daae22ba54d27d6a9d744a4ba
+  /* line 16, only-image.scss */
   .only-image--logo {
     position: absolute;
     max-width: 10%;
